Import of KIZ/MathML-Entities-Approximate-0.20 from CPAN.
gitpan-cpan-distribution: MathML-Entities-Approximate
gitpan-cpan-version:      0.20
gitpan-cpan-path:         KIZ/MathML-Entities-Approximate-0.20.tar.gz
gitpan-cpan-author:       KIZ
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -4,3 +4,6 @@ Revision history for Perl extension MathML::Entities::Approximate.
 	- original version; created by h2xs 1.23 with options
 		-AX -b 5.6.0 --use-new-tests -n MathML::Entities::Approximate
 
+0.10  Tue Dec 13
+        - Correct some typo's in the documentation
+        - Add the getSet method
