--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 MathML-Entities-Approximate version 0.01
 ========================================
 
+A subclass of MathML::Entities that supplies ASCII-approximate characters for XHTML+MathML Named Entities.
 
 INSTALLATION
 
@@ -15,13 +16,12 @@ DEPENDENCIES
 
 This module requires these other modules and libraries:
 
+  MathML::Entities
   Test::More
 
 COPYRIGHT AND LICENCE
 
-Put the correct copyright and licence information here.
-
-Copyright (C) 2005 by Ian Stuart
+Copyright (C) 2005 by Ian Stuart/EDINA
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.6 or,
